--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "@hot-loader/react-dom": "^16.9.0",
     "prettier": "^1.18.2",
     "rimraf": "^3.0.0"
   }
