--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "gatsby serve"
   },
   "dependencies": {
+    "@types/node": "^14.0.12",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.0.0",
