--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "clear": "rimraf .cache public",
     "format": "prettier --write src/**/*.{js,json,jsx,ts,tsx,css,scss}",
     "dev": "gatsby develop -H 0.0.0.0",
+    "type-check": "tsc --noEmit",
+    "prebuild": "yarn type-check",
     "build": "gatsby build",
     "start": "gatsby serve"
   },
@@ -19,6 +21,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.0.0",
     "gatsby": "^2.23.1",
+    "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-layout": "^1.1.8",
     "gatsby-plugin-react-helmet": "^3.3.3",
     "gatsby-plugin-sass": "^2.3.3",
@@ -31,7 +34,20 @@
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^16.13.0",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-flowtype": "^5.1.3",
+    "eslint-plugin-import": "^2.21.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "prettier": "^2.0.5",
-    "rimraf": "^3.0.0"
+    "rimraf": "^3.0.0",
+    "typescript": "^3.9.5"
   }
 }
