--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "noImplicitAny": false
   },
   "include": ["src"],
-  "exclude": [".cache", "node_modules"]
+  "exclude": ["node_modules", ".cache", "public"]
 }
